                  Thu Feb 24 23:52:43 UTC 2011


Directory drivers/linux/hasim
 hasim-fpga-ctrl.c         Locally Modified          500 
 Makefile                  Locally Modified          500 


Updated hasim-fpga-ctrl to have a hook for an arbitrary configuration program.

----------
kfleming    Date: Thu Feb 24 19:43:42 EST 2011  CSN: CSN-platforms-502
                  Fri Feb 25 00:43:42 UTC 2011


Directory modules/bluespec/common/fpgaenv/physical-platform/xilinx_xupV5/pcie
 xilinx-xup-pcie.awb       Locally Modified          501 


Added SOFT_RESET property to pcie awb, freeing us from modifying the
run script for those platforms which do not support soft reset.

Finally.

----------
kfleming    Date: Fri Feb 25 11:35:18 EST 2011  CSN: CSN-platforms-503
                  Fri Feb 25 16:35:18 UTC 2011


Directory modules/bluespec/common/fpgaenv/physical-platform/xilinx_xupV5/sata
 xilinx-xup-sata.awb       Locally Modified          502 


Updated sata platform to export XUPV5 FPGA_PLATFORM

----------
kfleming    Date: Fri Feb 25 12:13:43 EST 2011  CSN: CSN-platforms-504
                  Fri Feb 25 17:13:43 UTC 2011


Directory modules/bluespec/common/fpgaenv/physical-platform/xilinx_xupV5/pcie-sata
 xilinx-xup-pcie-sata.awb  Locally Modified          503 


Added FPGA_PLATFORM to pcie-sata platform.

----------
kfleming    Date: Mon Feb 28 13:42:00 EST 2011  CSN: CSN-platforms-506
                  Mon Feb 28 18:42:00 UTC 2011


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/sata-bluespec
 XUPV5_SERDES.bsv          Locally Modified          505 


Added a function for processing SERDES data. 

----------
kfleming    Date: Wed Mar 16 11:07:26 EDT 2011  CSN: CSN-platforms-508
                  Wed Mar 16 15:07:26 UTC 2011


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/pci-express-bluespec
 Bridge.bsv                Locally Modified          507 



Throw PCIE wires across a null crossing.