@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-508
+CSN=CSN-platforms-509
 Dependencies=hasim/HEAD
